--- a/learn.html
+++ b/learn.html
@@ -16,7 +16,7 @@
     <div class="container">
         <div class="row">
             <div class="col my-4">
-                <a href="Learning/coding/start.html">
+                <a href="learning/coding/start.html">
                 <div class="card" style="width: 18rem;">
                     <img src="img/coding.png" class="card-img-top my-2" alt="..." width="214px" height="235px">
                     <div class="card-body">
@@ -25,7 +25,7 @@
                 </div></a>
             </div>
             <div class="col my-4">
-                <a href="Learning/language/start.html">
+                <a href="learning/language/start.html">
                 <div class="card" style="width: 18rem;">
                     <img src="img/language.png" class="card-img-top" alt="..." width="214px" height="235px">
                     <div class="card-body">
