--- a/money_slip.html
+++ b/money_slip.html
@@ -21,7 +21,7 @@
         <h1 class="display-4">Certificate of apprciation</h1>
         <p class="lead" id="statement"></p>
         <hr class="my-4">
-        <p>We request his/her to give him a gife of the respective amount</p>
+        <p>He is eligible for a gift of the respective amount</p>
         <p>If he likes it please rate us on play store⭐⭐⭐⭐⭐</p>
         
       </div>
