--- a/index.html
+++ b/index.html
@@ -20,7 +20,7 @@
         <div class="row">
             
             <div class="col my-4">
-                <a href="/quiz.html">
+                <a href="quiz.html">
                 <div class="card" style="width: 18rem;">
                     <img src="img/quiz.png" class="card-img-top my-2" alt="Play Quiz to earn money" width="214px" height="235px">
                     <div class="card-body">
@@ -29,7 +29,7 @@
                 </div></a>
             </div>
             <div class="col my-4">
-                <a href="/bank.html">
+                <a href="bank.html">
                 <div class="card" style="width: 18rem;">
                     <img src="img/bank.png" class="card-img-top" alt="A simple self bank" width="214px" height="235px">
                     <div class="card-body">
@@ -39,7 +39,7 @@
             </div>
             <div class="w-100"></div>
             <div class="col my-4">
-                <a href="/learn.html">
+                <a href="learn.html">
                 <div class="card" style="width: 18rem;">
                     <img src="img/learning.png" class="card-img-top" alt="..." width="214px" height="235px">
                     <div class="card-body">
